force-app/main/default/objects/Block__c/fields/Daily_Occupied_Seats__c.field-meta.xml
<CustomField>
    <fullName>Daily_Occupied_Seats__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Daily Occupied Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>