force-app/main/default/objects/Block__c/fields/Daily_Seats_Available__c.field-meta.xml
<CustomField>
    <fullName>Daily_Seats_Available__c</fullName>
    <label>Daily Seats Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>