force-app/main/default/objects/Block__c/fields/Hybrid_Seats_Available__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Seats_Available__c</fullName>
    <formula>Total_Seats__c - Daily_Seats_Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hybrid Seats Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>