force-app/main/default/objects/Block__c/validationRules/DailyAvailSeatsLessThanTotalSeats.validationRule-meta.xml
<ValidationRule>
    <fullName>DailyAvailSeatsLessThanTotalSeats</fullName>
    <active>true</active>
    <errorConditionFormula>Daily_Seats_Available__c &gt; Total_Seats__c</errorConditionFormula>
    <errorMessage>Daily Seats Available cannot be greater than the Total Seats</errorMessage>
</ValidationRule>