force-app/main/default/objects/Block__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Total_Seats__c</columns>
    <columns>Daily_Seats_Available__c</columns>
    <columns>Daily_Occupied_Seats__c</columns>
    <columns>Hybrid_Seats_Available__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>